created dom element adn append it to the main html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
         <div class="site-header">Every day backpack</div>
         <div class="site-description"> backpack parking all the time</div>
     </header>
-   
     <main class="main-content">
+        <p class="paragraph">
+            If you're carrying a heavy load, you can't find a better tool than a
+            backpack. Distributing the weight evenly across your shoulders, back,
+            and hips, the backpack lets you use the natural frame of your body to
+            literally <em>shoulder</em> the weight while your legs do the
+            carrying.
+
+        </p>
        
     </main>
     <footer class="site-footer">
