created a method the update color and its value

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         </p>
        
     </main>
+    <div class="boxes">
+        <h1 class="title-collision"> When <code>Var </code> and scope collide!!!</h1>
+        <div class="left"> color: <code class="color-value">green</code></div>
+        <div class="right">color: <code class="color-value">green</code></div>
+        <div class="left-middle">color: <code class="color-value">green</code></div>
+        <div class="right-middle">color: <code class="color-value">green</code></div>
+    </div>
     <footer class="site-footer">
         <p>Practice makes perfect</p>
     </footer>
