--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="../asset/images/style.css" media="all">
-    <script type="module" src="Backpack.js"></script>
+    <script type="module" src="./component/Backpack.js"></script>
     <script type="module" src="script.js"></script>
+    <script type="module" src="./component/data.js"></script>
 </head>
 <body>
     <header>
